--- a/app/views/ideas/form.html.haml
+++ b/app/views/ideas/form.html.haml
@@ -16,7 +16,7 @@
           = f.submit("Submit #{Idea::TYPES[@idea.idea_type]}", class: "button button-actionable", style: "float:right;")
   %div.submit_idea_tips
     %h3 
-      %img{src:"https://s3.amazonaws.com/moonlite-nsdub/static/Lightbulb+icon", style:"height:30px; width:30px;"}
+      %img{src:"https://s3.amazonaws.com/moonlite-nsdub/static/Lightbulb+icon", alt: "Lightbulb", style:"height:30px; width:30px;"}
       Tips:
     %ul
       %li Keep the title of your idea short and sweet.
