--- a/app/views/layouts/_report_issue_modal.html.haml
+++ b/app/views/layouts/_report_issue_modal.html.haml
@@ -17,9 +17,9 @@
       %div.explorenewusercontent{ style: "margin:45px;" }
         %div.exploreheader{ style: "width: inherit;" }
           %div.modal_close
-            %img{:src => "https://s3.amazonaws.com/moonlite-nsdub/static/close_icon.png"}
+            %img{:src => "https://s3.amazonaws.com/moonlite-nsdub/static/close_icon.png", alt: "Close"}
           %h1{ style: "margin-bottom: 0; line-height: 23px;" }
-            %img{:src => "https://s3.amazonaws.com/moonlite-nsdub/static/stoney_50x66.png", :style => "height:45px;" } 
+            %img{:src => "https://s3.amazonaws.com/moonlite-nsdub/static/stoney_50x66.png", :style => "height:45px;", alt: "Stoney" } 
             %span{style: "font-size:26px;"} Report an issue
         %hr{ style: "margin: 0;" }
         %div.explorebody{ style: "padding:10px;" }
