--- a/app/views/pages/about.html.haml
+++ b/app/views/pages/about.html.haml
@@ -1,7 +1,7 @@
 .aboutcontainer
   .aboutbox
     .aboutheader
-      %img{:src => "https://s3.amazonaws.com/moonlite-nsdub/static/stoney+100x150.png"}
+      %img{:src => "https://s3.amazonaws.com/moonlite-nsdub/static/stoney+100x150.png", alt: "Stoney"}
         %span Prove yourself.
     %hr{:style => "margin:0"}
       .aboutbody
