--- a/app/views/pages/intro.html.haml
+++ b/app/views/pages/intro.html.haml
@@ -10,24 +10,24 @@
 %div.intcontainer
   %div.firstchallengeint
     %div.firstchallengeintheader{ style:"padding: 7px 0 0 9px" }
-      %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/stoney_50x66.png", style: "width:42px; height:47px; margin:4px 4px 0 0; vertical-align:baseline;" }
+      %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/stoney_50x66.png", style: "width:42px; height:47px; margin:4px 4px 0 0; vertical-align:baseline;", alt: "Stoney"}
       %span{ style:"font-size:35px; position:relative; bottom:9px;" } Welcome to MetaBright!
     %hr{ style:"margin:0" }
     %div.introintcontent
       %p{ style:"font-size:18px; margin-bottom:0;" } Here's how it works:
       %ul
         %li
-          %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/Random+numbers/round_1_purple.png" }
+          %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/Random+numbers/round_1_purple.png", alt: "One" }
           %h3.inttitle Choose a Persona
           %p.intdetails
             The world of MetaBright is organized according to Personas. Personas represent <strong>who you are</strong> or <strong>who you want to be</strong>.
         %li
-          %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/Random+numbers/round_2_purple.png" }
+          %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/Random+numbers/round_2_purple.png", alt: "Two" }
           %h3.inttitle Prove yourself
           %p.intdetails 
             Personas are made up of <strong>Challenges</strong> - areas of knowledge, skill, and adventure. Your progress in Challenges corresponds to advancement in your Persona.
         %li
-          %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/Random+numbers/round_3_purple.png" }
+          %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/Random+numbers/round_3_purple.png", alt: "Three" }
           %h3.inttitle Grow
           %p.intdetails
             Use Challenges to <strong>guide your improvement</strong> and build out your Persona. Dominate the leaderboard and create your own Challenges to become a master of MetaBright.
