--- a/app/views/paths/new.html.haml
+++ b/app/views/paths/new.html.haml
@@ -15,7 +15,7 @@
       });
     });
   %div
-    = image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/stoney+100x150.png", style: "height: 60px; display: inline; vertical-align: middle"
+    = image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/stoney+100x150.png", style: "height: 60px; display: inline; vertical-align: middle", alt: "Stoney"
     %h1{ style: "display: inline; vertical-align: middle;" } Create a Challenge
   %hr{ style: "margin: 5px 0 20px 0;"}
   = form_for(@path) do |f|
