--- a/app/views/shared/_sharing.html.haml
+++ b/app/views/shared/_sharing.html.haml
@@ -1,6 +1,6 @@
 - title ||= "Challenge yourself on MetaBright!"
 - url ||= request.url
 %div.addthis_toolbox.social_toolbar{ style: custom_style, "addthis:url" => url, "addthis:title" => title }
-  %a.addthis_button_facebook= image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/icon+Facebook+small.png"
-  %a.addthis_button_twitter= image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/icon+twitter+small.png"
-  %a.addthis_button_google_plusone_share= image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/icon+Google%2B+small.png"
+  %a.addthis_button_facebook= image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/icon+Facebook+small.png", alt: "Share on Facebook"
+  %a.addthis_button_twitter= image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/icon+twitter+small.png", alt: "Share on Twitter"
+  %a.addthis_button_google_plusone_share= image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/icon+Google%2B+small.png", alt: "Share on Google+"
