--- a/app/views/layouts/_login_modal.html.haml
+++ b/app/views/layouts/_login_modal.html.haml
@@ -5,9 +5,9 @@
     %div.explorenewusercontent{ style: "margin:45px;" }
       %div.exploreheader{ style: "width: inherit;" }
         %div.modal_close
-          %img{:src => "https://s3.amazonaws.com/moonlite-nsdub/static/close_icon.png"}
+          %img{:src => "https://s3.amazonaws.com/moonlite-nsdub/static/close_icon.png", alt:"Close"}
         %h1{ style: "margin-bottom: 0; line-height: 23px;" }
-          %img{:src => "https://s3.amazonaws.com/moonlite-nsdub/static/stoney_50x66.png", :style => "height:45px;" } 
+          %img{:src => "https://s3.amazonaws.com/moonlite-nsdub/static/stoney_50x66.png", :style => "height:45px;", alt:"Stoney" } 
           %span{style: "font-size:26px;"} Welcome to MetaBright! 
       %hr{ style: "margin: 0;" }
       %div.explorebody{ style: "min-height: 235px;" }
@@ -15,12 +15,12 @@
           %p{ style: "padding: 10px; font-size: 14px;" } We believe that everyone has the right to be recognized for their knowledge and skills. From accordion playing to zoology, compete with others, and grow together.
           %div
             = link_to "/auth/google_oauth2", class: "btn danger", style: "width:205px;" do
-              %img{ style: "height:30px;", src: "https://s3.amazonaws.com/moonlite-nsdub/static/icon+google.png" }
+              %img{ style: "height:30px;", src: "https://s3.amazonaws.com/moonlite-nsdub/static/icon+google.png", alt: "Google" }
               %span.landingbuttontext Sign in with Google »
           %div{style: "background-image: url(https://s3.amazonaws.com/moonlite-nsdub/static/divider.png); background-repeat:no-repeat; background-position: center 10px; width:234px; margin:10px 0; "} OR
           %div
             = link_to "/auth/facebook", class: "btn danger", style: "width:205px;" do
-              %img{ style: "height:30px;", src: "https://s3.amazonaws.com/moonlite-nsdub/static/icon+facebook.png" }
+              %img{ style: "height:30px;", src: "https://s3.amazonaws.com/moonlite-nsdub/static/icon+facebook.png", alt: "Facebook" }
               %span.landingbuttontext Sign in with Facebook »
           %div{style:"padding:12px;"}
             %span{style:""} Learn about these sign in options
