--- a/app/views/pages/tos.html.haml
+++ b/app/views/pages/tos.html.haml
@@ -1,7 +1,7 @@
 .aboutcontainer
   .aboutbox
     .aboutheader
-      %img{:src => "https://s3.amazonaws.com/moonlite-nsdub/static/stoney+100x150.png"}
+      %img{:src => "https://s3.amazonaws.com/moonlite-nsdub/static/stoney+100x150.png", alt: "Stoney"}
         %span Terms of Service
     %hr{:style => "margin:0"}
       .aboutbody{ style: "min-height: 333px;" }
