--- a/app/views/sections/_continue.html.haml
+++ b/app/views/sections/_continue.html.haml
@@ -38,7 +38,7 @@
         });
       });
     %div.quizheader
-      = image_tag @path.path_pic, style: "width: 50px; height: 50px;"
+      = image_tag @path.path_pic, style: "width: 50px; height: 50px;", alt: "#{@path.name}"
       %div{ style: "display:inline-block;" }
         %span <strong>#{@path.name}:</strong> #{@section.name}</span>
         %div#idprogressbar
