--- a/app/views/sections/_intro.html.haml
+++ b/app/views/sections/_intro.html.haml
@@ -14,17 +14,17 @@
     %div.firstchallengeintcontent
       %ul
         %li
-          %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/Lightbulb+icon" }
+          %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/Lightbulb+icon", alt: "Tip" }
           %span.inttitle Streak bonus
           %br
           %span.intdetails Get multiple questions correct consecutively and you'll earn streak multipliers!
         %li
-          %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/Lightbulb+icon" }
+          %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/Lightbulb+icon", alt: "Tip" }
           %span.inttitle Questions are timed
           %br
           %span.intdetails As time decreases, so do your possible points. If time expires before you respond, you'll lose your streak bonus.
         %li
-          %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/Lightbulb+icon" }
+          %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/Lightbulb+icon", alt: "Tip" }
           %span.inttitle This is just the beginning!
           %br
           %span.intdetails Continue to improve your score by taking <strong>Creative Responses</strong> and unlocking new sections.
