--- a/app/views/shared/_newsfeed.html.haml
+++ b/app/views/shared/_newsfeed.html.haml
@@ -44,7 +44,7 @@
                         %li= link_to "Delete Submission", retract_submission_path(ct.id), remote: true, confirm: "Are you sure you want to delete your submission?", style: "padding: 0; color: inherit; text-shadow: none; padding-left: 8px; margin-left: -8px; margin-bottom: 2px;", class: "retract_link"
             - else
               = link_to vote_task_path(ct.task.id, sa_id: ct.submitted_answer.id), remote: true, class: ("btn vote_button " + (@votes.include?(ct.submitted_answer.id) ? "btn-info" : "")) do
-                %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/purple+upvote+arrow.png" }            
+                %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/purple+upvote+arrow.png", alt: "Up-vote" }            
           - else
             %span.vote_points{style:"font-weight: bold;color: #404040;font-size: 16px;position: relative; top:3px;"}= ct.points_awarded
             %span{style:"font-weight: bold;color: #404040;font-size: 16px;position: relative; top:3px; margin-right:5px;"} pts
@@ -66,7 +66,7 @@
         - if ct.task.answer_sub_type == Task::TEXT
           %pre{ style: "margin:20px; word-break:normal;" }= ct.submitted_answer.content
         - elsif ct.task.answer_sub_type == Task::IMAGE
-          = image_tag(sanitize(ct.submitted_answer.content))
+          = image_tag(sanitize(ct.submitted_answer.content)), alt: "Creative Response Image"
         - elsif ct.task.answer_sub_type == Task::YOUTUBE
           %center
             %div.youtube_answer{ id: "youtube_answer_#{ct.id}", alt: ct.submitted_answer.content }        
