--- a/app/views/stored_resources/_new_image.html.haml
+++ b/app/views/stored_resources/_new_image.html.haml
@@ -28,7 +28,7 @@
     = image_tag "https://s3-us-west-1.amazonaws.com/moonlite/static/image.png", size: "16x16", style: "vertical-align: middle;"
     %span{ style: "vertical-align: middle; font-size: 13px;" } Add image:
     = file_field_tag("obj", id: unique_id, style: "margin-left: 2px; line-height: inherit; height: inherit; vertical-align: middle; width: 185px;")
-    = image_tag "https://s3-us-west-1.amazonaws.com/moonlite/static/loading.gif", size: "20x20", style: "vertical-align: middle; display: none;", id: "loading_image_#{unique_id}"
+    = image_tag "https://s3-us-west-1.amazonaws.com/moonlite/static/loading.gif", size: "20x20", style: "vertical-align: middle; display: none;", id: "loading_image_#{unique_id}", alt: "Loading"
   %div{ style: "margin-top: 10px;" }
     = hidden_field_tag("stored_resource_id", nil, class: "image_input_field")
-    %img.image_preview{ style: "height: 70px; max-width: 150px; display: none;" }
+    %img.image_preview{ style: "height: 70px; max-width: 150px; display: none;", alt: "Image preview" }
