--- a/app/views/tasks/arena.html.haml
+++ b/app/views/tasks/arena.html.haml
@@ -2,7 +2,7 @@
   %div.quizcontainer
     %div.quizspace
       %div.quizheader
-        = image_tag @path.path_pic, size: "40x40"
+        = image_tag @path.path_pic, size: "40x40", alt: "#{@path.name}"
         %div{ style: "display:inline-block;" }
           %span <strong>#{@path.name}:</strong> #{@section.name}</span>
           %div#idprogressbar
